filter deprecated functions by rule